--- a/index1.html
+++ b/index1.html
@@ -434,7 +434,7 @@
                                                         <h1>Graphics</h1>
                                                         </div>
                                                         <div class="el32">
-                                                           <h1>cyber security</h1>
+                                                           <h1>AWS</h1>
                                                         </div>
                                                         <div class="el33">
                                                             <h1>Artificial intilligence</h1>
